--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0"
   }
 }
